--- a/vastpn-remote-config/vastpn-order/i18n/message/messages_en_US.properties
+++ b/vastpn-remote-config/vastpn-order/i18n/message/messages_en_US.properties
@@ -1,3 +1,3 @@
-mess.user.name=UserName  
-mess.user.password=Password  
-mess.user.btn=Sign In  
+user.name=UserName  
+user.password=Password  
+user.btn=Sign In  
